--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "dependencies": {
     "express": "^4.17.1",
     "nodemon": "^2.0.7"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.12"
   }
 }
