--- a/ormconfig.json
+++ b/ormconfig.json
@@ -11,5 +11,9 @@
     ],
     "migrations": [
        "src/migration/**/*.ts"
-    ]
+    ],
+    "cli": {
+        "entitiesDir": "src/entity",
+        "migrationsDir": "src/database/migrations"
+    }
  }
