--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "scripts": {
     "start": "ts-node-dev src/server.ts",
-    "typeorm": "ts-node-dev node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+    "test": "jest"
   },
   "repository": "git@github.com:BrunaBelo/api-cottonnect.git",
   "author": "BrunaBelo <anabruna28@gmail.com>",
@@ -19,6 +20,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/jest": "^26.0.24",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
@@ -29,7 +31,9 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
   }
