--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "license": "MIT",
   "dependencies": {
     "express": "^4.17.1",
+    "express-async-errors": "^3.1.1",
     "nodemon": "^2.0.7",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
