--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "eslint-plugin-prettier": "^3.4.0",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
+    "sqlite3": "^5.0.2",
     "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.6",
     "typescript": "^4.3.2"
