--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.12",
+    "@types/factory-girl": "^5.0.8",
     "@types/jest": "^26.0.24",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
@@ -34,6 +35,7 @@
     "eslint-plugin-import": "^2.22.1",
     "eslint-plugin-import-helpers": "^1.1.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "factory-girl": "^5.0.4",
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "sqlite3": "^5.0.2",
