--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "sqlite3": "^5.0.2",
     "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.6",
+    "typeorm-factory": "^0.0.14",
     "typescript": "^4.3.2"
   }
 }
