--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "author": "BrunaBelo <anabruna28@gmail.com>",
   "license": "MIT",
   "dependencies": {
+    "@types/bcryptjs": "^2.4.2",
+    "bcryptjs": "^2.4.3",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
