--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
   "license": "MIT",
   "dependencies": {
     "@types/bcryptjs": "^2.4.2",
+    "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/yup": "^0.29.13",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
