--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "NODE_ENV=development ts-node-dev src/index.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
-    "test": "NODE_ENV=test jest",
+    "test": "NODE_ENV=test jest --runInBand",
     "restart-docker": "docker-compose stop && docker-compose start && docker logs -f cottonnect"
   },
   "repository": "git@github.com:BrunaBelo/api-cottonnect.git",
