--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@types/factory-girl": "^5.0.8",
     "@types/faker": "^5.5.8",
     "@types/jest": "^26.0.24",
+    "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.28.2",
     "@typescript-eslint/parser": "^4.28.2",
@@ -49,6 +50,7 @@
     "jest": "^27.0.6",
     "prettier": "^2.3.2",
     "sqlite3": "^5.0.2",
+    "supertest": "^6.1.6",
     "ts-jest": "^27.0.4",
     "ts-node-dev": "^1.1.6",
     "typeorm-factory": "^0.0.14",
