Install dependency before run migration

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,9 +28,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+
+      - name: Install Dependencies
+        run: npm install
+
       - name: Run Migrations
         run: npm run typeorm migration:run
+
       - name: Run Tests
-        run: |
-          npm install 
-          npm test
+        run: npm test
