--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "scripts": {
     "start": "NODE_ENV=development ts-node-dev src/index.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
+    "migration-test": "NODE_ENV=test ts-node-dev node_modules/typeorm/cli.js migration:run",
     "test": "NODE_ENV=test jest --runInBand",
     "restart-docker": "docker-compose stop && docker-compose start && docker logs -f cottonnect"
   },
