--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,13 +13,13 @@ jobs:
 
     services:
       postgres:
-        image: postgres
+        image: postgres:12.2
         env:
           POSTGRES_USER: postgres
           POSTGRES_PASSWORD: postgres
           POSTGRES_DB: cottonnect-test
         ports:
-          - 2345:5432
+          - 2345:2345
         options: >-
           --health-cmd pg_isready
           --health-interval 10s
@@ -31,12 +31,6 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-
-      - name: Copy .env.test
-        run: cp .env.test.exemple .env.test
-
-      - name: Run Migrations
-        run: npm run migration-test
 
       - name: Run Tests
         run: npm test
