--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -32,5 +32,13 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Connect to PostgreSQL
+        env:
+          TYPEORM_HOST: localhost
+          TYPEORM_USERNAME: postgres
+          TYPEORM_PASSWORD: postgres
+          TYPEORM_DATABASE: cottonnect
+          TYPEORM_PORT: 2345
+
       - name: Run Tests
         run: npm test
