--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "migration-test": "NODE_ENV=test ts-node-dev node_modules/typeorm/cli.js migration:run",
     "test": "NODE_ENV=test jest --runInBand",
     "restart-docker": "docker-compose stop && docker-compose start && docker logs -f cottonnect",
-    "populate-locations": "ts-node-dev src/database/seeds/populateLocations.ts"
+    "populate-locations": "ts-node-dev src/database/seeds/populateLocations.ts",
+    "populate-roles": "ts-node-dev src/database/seeds/populateRole.ts",
+    "run-seeds": "concurrently \"yarn populate-locations\" \"yarn populate-roles\""
   },
   "repository": "git@github.com:BrunaBelo/api-cottonnect.git",
   "author": "BrunaBelo <anabruna28@gmail.com>",
@@ -20,6 +22,7 @@
     "@types/yup": "^0.29.13",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
+    "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.1",
