Addtoken_key to .env.exemple

--- a/.env.exemple
+++ b/.env.exemple
@@ -10,3 +10,4 @@ TYPEORM_ENTITIES=src/model/*.ts
 TYPEORM_ENTITIES_DIR=src/model
 TYPEORM_MIGRATIONS=src/database/migrations/*.ts
 TYPEORM_MIGRATIONS_DIR=src/database/migrations
+TOKEN_KEY=""
