Add cloudinary credentials

--- a/.env.exemple
+++ b/.env.exemple
@@ -11,3 +11,7 @@ TYPEORM_ENTITIES_DIR=src/model
 TYPEORM_MIGRATIONS=src/database/migrations/*.ts
 TYPEORM_MIGRATIONS_DIR=src/database/migrations
 TOKEN_KEY=""
+CLOUDINARY_BASEURL=https://api.cloudinary.com/v1_1/CLOUD_NAME/image/upload
+CLOUDINARY_CLOUD=cloud name
+CLOUDINARY_KEY=api key
+CLOUDNARY_PRESET=preset name
