--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@types/bcryptjs": "^2.4.2",
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.5",
+    "@types/multer": "^1.4.7",
     "@types/yup": "^0.29.13",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
@@ -29,6 +30,7 @@
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "jsonwebtoken": "^8.5.1",
+    "multer": "^1.4.4",
     "nodemon": "^2.0.7",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
