Add mailer to send recouver account email

--- a/.env.exemple
+++ b/.env.exemple
@@ -15,3 +15,8 @@ CLOUDINARY_BASEURL=https://api.cloudinary.com/v1_1/CLOUD_NAME/image/upload
 CLOUDINARY_CLOUD=cloud name
 CLOUDINARY_KEY=api key
 CLOUDNARY_PRESET=preset name
+
+EMAIL=exemple@gmail.com
+EMAIL_PASSWORD=12345678
+
+APPLICATION_PATH=front end root link
