--- a/package.json
+++ b/package.json
@@ -21,16 +21,21 @@
     "@types/cors": "^2.8.12",
     "@types/jsonwebtoken": "^8.5.5",
     "@types/multer": "^1.4.7",
+    "@types/nodemailer": "^6.4.4",
     "@types/yup": "^0.29.13",
     "axios": "^0.24.0",
     "bcryptjs": "^2.4.3",
     "concurrently": "^7.0.0",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
+    "ejs": "^3.1.7",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
+    "html-to-text": "^8.2.0",
     "jsonwebtoken": "^8.5.1",
+    "juice": "^8.0.0",
     "multer": "^1.4.4",
+    "nodemailer": "^6.7.4",
     "nodemon": "^2.0.7",
     "pg": "^8.7.1",
     "reflect-metadata": "^0.1.13",
@@ -40,9 +45,11 @@
   },
   "devDependencies": {
     "@types/axios": "^0.14.0",
+    "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.12",
     "@types/factory-girl": "^5.0.8",
     "@types/faker": "^5.5.8",
+    "@types/html-to-text": "^8.1.0",
     "@types/jest": "^27.4.0",
     "@types/supertest": "^2.0.11",
     "@types/uuid": "^8.3.1",
