Add verification phone number

--- a/.env.exemple
+++ b/.env.exemple
@@ -19,4 +19,8 @@ CLOUDNARY_PRESET=preset name
 EMAIL=exemple@gmail.com
 EMAIL_PASSWORD=12345678
 
+TWILIO_ACCOUNT_SID=sid
+TWILIO_AUTH_TOKEN=token
+TWILIO_SERVICE_SMS=service
+
 APPLICATION_PATH=front end root link
