--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,4 +31,4 @@ jobs:
         run: cp .env.test.exemple .env.test
 
       - name: Run Tests
-        run: npm test
+        run: npm NODE_ENV=test jest --runInBand
