--- a/.env.test.exemple
+++ b/.env.test.exemple
@@ -12,3 +12,5 @@ TYPEORM_MIGRATIONS=src/database/migrations/*.ts
 TYPEORM_MIGRATIONS_DIR=src/database/migrations
 TYPEORM_DROP_SCHEMA=true
 TYPEORM_MIGRATIONS_RUN=true
+TOKEN_KEY=TOKEN
+APPLICATION_PATH=http://localhost:3000
