Add port to .env

--- a/.env.exemple
+++ b/.env.exemple
@@ -23,4 +23,5 @@ TWILIO_ACCOUNT_SID=sid
 TWILIO_AUTH_TOKEN=token
 TWILIO_SERVICE_SMS=service
 
-APPLICATION_PATH=front end root link
+APPLICATION_PATH=https://cottonnect-front.herokuapp.com
+PORT=3333
