--- a/.env.test.exemple
+++ b/.env.test.exemple
@@ -13,4 +13,5 @@ TYPEORM_MIGRATIONS_DIR=src/database/migrations
 TYPEORM_DROP_SCHEMA=true
 TYPEORM_MIGRATIONS_RUN=true
 TOKEN_KEY=TOKEN
-APPLICATION_PATH=http://localhost:3000
+APPLICATION_PATH=https://cottonnect-front.herokuapp.com
+PORT=3333
