--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "NODE_ENV=development node src/index.ts",
+    "start": "node src/index.ts",
     "start-dev": "NODE_ENV=development ts-node-dev src/index.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "migration-test": "NODE_ENV=test ts-node-dev node_modules/typeorm/cli.js migration:run",
