--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "start": "node build/src/index.js",
     "tsc": "tsc",
     "postinstall": "npm run tsc",
-    "start-dev": "NODE_ENV=development ts-node-dev src/index.ts",
+    "start": "NODE_ENV=development ts-node-dev src/index.ts",
     "typeorm": "ts-node-dev node_modules/typeorm/cli.js",
     "migration-test": "NODE_ENV=test ts-node-dev node_modules/typeorm/cli.js migration:run",
     "test": "NODE_ENV=test jest --runInBand",
-    "restart-docker": "docker-compose stop && docker-compose start-dev && docker logs -f cottonnect",
+    "restart-docker": "docker-compose stop && docker-compose start && docker logs -f cottonnect",
     "populate-locations": "ts-node-dev src/database/seeds/populateLocations.ts",
     "populate-roles": "ts-node-dev src/database/seeds/populateRole.ts",
     "populate-categories": "ts-node-dev src/database/seeds/populateCategories.ts",
