--- a/.env.exemple
+++ b/.env.exemple
@@ -23,5 +23,5 @@ TWILIO_ACCOUNT_SID=sid
 TWILIO_AUTH_TOKEN=token
 TWILIO_SERVICE_SMS=service
 
-APPLICATION_PATH=https://cottonnect-front.herokuapp.com
+APPLICATION_PATH=https://cottonnect.herokuapp.com
 PORT=3333
