--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "jsonwebtoken": "^8.5.1",
     "juice": "^8.0.0",
     "multer": "^1.4.4",
+    "node-cron": "^3.0.0",
     "node-schedule": "^2.1.0",
     "nodemailer": "^6.7.4",
     "nodemon": "^2.0.7",
@@ -55,6 +56,7 @@
     "@types/faker": "^5.5.8",
     "@types/html-to-text": "^8.1.0",
     "@types/jest": "^27.4.0",
+    "@types/node-cron": "^3.0.1",
     "@types/node-schedule": "^2.1.0",
     "@types/supertest": "^2.0.11",
     "@types/twilio": "^3.19.3",
